migrating rest of jio components